Fixed issue causing horizontal scrollbar when the users editing toast is not visible

--- a/css/multiuserediting.css
+++ b/css/multiuserediting.css
@@ -50,8 +50,8 @@ placement: on right side of ".breadcrumbs-wrapper" */
     /* Hide message box by default */
     .multi-user-editing-alert-message {
         position: absolute;
-        right: -9999px;
-        top: 100%;
+        right: 0;
+        top: -9999px;
         width: 270px;
         margin: 0;
         opacity: 0;
@@ -70,7 +70,7 @@ placement: on right side of ".breadcrumbs-wrapper" */
     .multi-user-message-wrap:hover .multi-user-editing-alert-message,
     .multi-user-message-wrap:focus .multi-user-editing-alert-message {
         opacity: 1;
-        right: 0;
+        top: 100%;
         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
         -webkit-transition: opacity 0.3s ease-in-out 0s;
         transition: opacity 0.3s ease-in-out 0s;
